--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -72,28 +72,28 @@ h1, h2, h3, h4, h5, h6 {
 --------------------------------------------------------------*/
 
 #topbar {
-	padding: 0 0 20px 0;
-	font-size: 18px;
-	height: 50px;
-	transition: all 0.5s;
-	background: rgba(26, 24, 22, 0.8);
-	color: rgba(255, 255, 255, 0.7);
+  padding: 0 0 20px 0;
+  font-size: 18px;
+  height: 50px;
+  transition: all 0.5s;
+  background: rgba(26, 24, 22, 0.8);
+  color: rgba(255, 255, 255, 0.7);
 }
 
 #topbar.topbar-transparent {
-	background: transparent;
+  background: transparent;
 }
 
 #topbar.topbar-scrolled {
-	top: -40px;
+  top: -40px;
 }
 
 #topbar i {
-	color: #e03a3c;
+  color: #e03a3c;
 }
 
 #topbar i+i {
-	margin-left: 15px;
+  margin-left: 15px;
 }
 
 /*--------------------------------------------------------------
@@ -130,7 +130,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
 }
 
 @media (max-width: 992px) {
@@ -394,7 +394,6 @@ h1, h2, h3, h4, h5, h6 {
 
 #hero {
   height: 100vh;
-  
   overflow: hidden;
   position: relative;
 }
@@ -2365,4 +2364,12 @@ section {
   background: #e03a3c;
   color: #fff;
   text-decoration: none;
+}
+
+.carousel-text {
+  padding-top: 400px;
+  color: black;
+  -webkit-text-fill-color: #e03a3c; /* Will override color (regardless of order) */
+  -webkit-text-stroke-width: 1px;
+  -webkit-text-stroke-color: black;
 }
