--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2369,7 +2369,27 @@ section {
 .carousel-text {
   padding-top: 400px;
   color: black;
-  -webkit-text-fill-color: #e03a3c; /* Will override color (regardless of order) */
+  -webkit-text-fill-color: #e03a3c;
+  /* Will override color (regardless of order) */
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
+}
+
+.floating {
+  position: fixed;
+  width: 60px;
+  height: 60px;
+  bottom: 40px;
+  right: 40px;
+  background-color: #25d366;
+  color: #FFF;
+  border-radius: 50px;
+  text-align: center;
+  font-size: 30px;
+  box-shadow: 2px 2px 3px #999;
+  z-index: 100;
+}
+
+.float-button {
+  margin-top: 16px;
 }
