--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2369,7 +2369,7 @@ section {
 .carousel-text {
   padding-top: 400px;
   color: black;
-  -webkit-text-fill-color: #e03a3c;
+  -webkit-text-fill-color: #fc0000;
   /* Will override color (regardless of order) */
   -webkit-text-stroke-width: 1px;
   -webkit-text-stroke-color: black;
